--- a/index.html
+++ b/index.html
@@ -347,38 +347,38 @@
         }
         .onboarding-card {
             background: linear-gradient(145deg, #1A202C, #2D3748); /* Gradient for card */
-            border-radius: 1.5rem; /* More rounded corners */
+            border-radius: 1.5rem;
             padding: 2.5rem;
             max-width: 90%;
             width: 450px;
             text-align: center;
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.6);
             animation: slide-up 0.6s ease-out;
-            border: 1px solid rgba(99, 179, 237, 0.3); /* Subtle border */
+            border: 1px solid rgba(99, 179, 237, 0.3);
         }
         @keyframes slide-up {
             from { transform: translateY(50px); opacity: 0; }
             to { transform: translateY(0); opacity: 1; }
         }
         .onboarding-title {
-            font-size: 2.25rem; /* Larger title */
+            font-size: 2.25rem;
             font-weight: 700;
-            color: #90CDF4; /* Lighter blue */
+            color: #90CDF4;
             margin-bottom: 1.5rem;
             text-shadow: 0 0 10px rgba(144, 205, 244, 0.3);
         }
         .onboarding-text {
             font-size: 1.15rem;
             line-height: 1.6;
-            color: #CBD5E0; /* Lighter gray */
+            color: #CBD5E0;
             margin-bottom: 2rem;
         }
         .onboarding-button {
-            background: linear-gradient(90deg, #4299E1, #63B3ED); /* Blue gradient */
+            background: linear-gradient(90deg, #4299E1, #63B3ED);
             color: white;
             font-weight: bold;
             padding: 0.8rem 2rem;
-            border-radius: 1.5rem; /* Pill shape */
+            border-radius: 1.5rem;
             box-shadow: 0 5px 15px rgba(66, 153, 225, 0.4);
             transition: all 0.3s ease-in-out;
             transform: scale(1);
@@ -388,7 +388,7 @@
             box-shadow: 0 8px 20px rgba(66, 153, 225, 0.6);
         }
         .onboarding-button.close-btn {
-            background: linear-gradient(90deg, #48BB78, #68D391); /* Green gradient for close */
+            background: linear-gradient(90deg, #48BB78, #68D391);
             box-shadow: 0 5px 15px rgba(72, 187, 120, 0.4);
         }
         .onboarding-button.close-btn:hover {
@@ -404,31 +404,31 @@
             justify-content: center;
             flex: 1;
             padding: 0.75rem 0;
-            color: #A0AEC0; /* Gray text */
+            color: #A0AEC0;
             transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
             border-radius: 0.75rem;
         }
         .nav-button.active {
-            color: #63B3ED; /* Light blue for active */
-            background-color: rgba(99, 179, 237, 0.1); /* Light blue tint */
+            color: #63B3ED;
+            background-color: rgba(99, 179, 237, 0.1);
         }
         .nav-button:hover {
-            color: #90CDF4; /* Lighter blue on hover */
+            color: #90CDF4;
         }
 
         /* Counter page specific styles */
         .counter-timer-circle {
-            width: 220px; /* Slightly larger */
+            width: 220px;
             height: 220px;
             border-radius: 50%;
-            background: #1A202C; /* Darker blue */
+            background: #1A202C;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             position: relative;
             box-shadow: 0 0 20px rgba(99, 179, 237, 0.3);
-            border: 3px solid #4A5568; /* Subtle border */
+            border: 3px solid #4A5568;
         }
         .counter-timer-circle.pulsing {
             animation: pulse-effect 1.5s infinite ease-in-out;
@@ -439,9 +439,9 @@
             100% { box-shadow: 0 0 20px rgba(99, 179, 237, 0.3); transform: scale(1); }
         }
         .counter-score-display {
-            font-size: 2.5rem; /* Larger score */
+            font-size: 2.5rem;
             font-weight: 800;
-            color: #48BB78; /* Vibrant green */
+            color: #48BB78;
             text-shadow: 0 0 10px rgba(72, 187, 120, 0.5);
             margin-top: 0.5rem;
         }
@@ -477,7 +477,7 @@
             display: flex;
             align-items: center;
             padding: 0.75rem;
-            background: #2D3748; /* Slightly lighter gray for list items */
+            background: #2D3748;
             border-radius: 0.75rem;
             margin-bottom: 0.5rem;
         }
@@ -496,7 +496,7 @@
             height: 80px;
             border-radius: 50%;
             object-fit: cover;
-            border: 3px solid #ECC94B; /* Gold border for top ranker */
+            border: 3px solid #ECC94B;
         }
 
         /* Baccalaureate page styles */
@@ -523,7 +523,7 @@
             box-shadow: 0 4px 10px rgba(66, 153, 225, 0.4);
         }
         .year-button.solved {
-            background: linear-gradient(90deg, #48BB78, #68D391); /* Green for solved */
+            background: linear-gradient(90deg, #48BB78, #68D391);
             color: white;
             box-shadow: 0 4px 10px rgba(72, 187, 120, 0.4);
         }
